syntax = "proto3";
package local;

message InitRequest {
    optional string tracker_name = 1;
    required string email = 2;
    required string daemon_name = 3;
}

message InitResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        TIMEOUT = 99;
    }
    required Result response = 1;
}

message ConfirmRequest {
    required string tracker_name = 1;
    required string token = 2;
}

message ConfirmResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        TIMEOUT = 99;
    }
    required Result response = 1;
    optional string token = 2;
}

message CreateRequest {
    enum Type {
        SERVER = 0;
        CLIENT = 1;
        NOT_CONNECTED = 2;
    }
    required string tracker_name = 1;
    required string daemon_name = 2;
    required string path = 3;
    required Type type = 4;
    required bool encrypted = 5;
    required bool fixed = 6;
    optional string connect_address = 7;
    required string connect_port = 8;
    optional string listen_address = 9;
    required string listen_port = 10;
}

message CreateResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        INVALID_PATH = 2;
        PATH_EXISTS = 3;
        TIMEOUT = 99;
    }
    required Result response = 1;
    optional string server_token = 2;
    optional string client_token = 3;
}

message DeleteRequest {
    required string tracker_name = 1;
    required string path = 2;
}

message DeleteResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        INVALID_PATH = 2;
        PATH_NOT_FOUND = 3;
        TIMEOUT = 99;
    }
    required Result response = 1;
}

message ConnectRequest {
    required string tracker_name = 1;
    required string daemon_name = 2;
    required string token = 3;
}

message ConnectResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        ALREADY_CONNECTED = 2;
        TIMEOUT = 99;
    }
    required Result response = 1;
}

message DisconnectRequest {
    required string tracker_name = 1;
    required string daemon_name = 2;
    required string path = 3;
}

message DisconnectResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        INVALID_PATH = 2;
        PATH_NOT_FOUND = 3;
        NOT_CONNECTED = 4;
        TIMEOUT = 99;
    }
    required Result response = 1;
}

message TreeRequest {
    required string tracker_name = 1;
    required string daemon_name = 2;
    optional string path = 3;
}

message Tree {
    enum Type {
        SERVER = 0;
        CLIENT = 1;
        NOT_CONNECTED = 2;
    }
    repeated Tree tree = 1;
    required bool connection = 2;
    required Type type = 3;
    required string name = 4;
    required string path = 5;
    optional string server_token = 6;
    optional string client_token = 7;
}

message TreeResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        INVALID_PATH = 2;
        PATH_NOT_FOUND = 3;
        TIMEOUT = 99;
    }
    required Result response = 1;
    optional Tree tree = 2;
}

message ClientMessage {
    enum Type {
        INIT_REQUEST = 0;
        CONFIRM_REQUEST = 1;
        CREATE_REQUEST = 2;
        DELETE_REQUEST = 3;
        CONNECT_REQUEST = 4;
        DISCONNECT_REQUEST = 5;
        TREE_REQUEST = 6;
    }
    required Type type = 1;
    optional InitRequest init_request = 2;
    optional ConfirmRequest confirm_request = 3;
    optional CreateRequest create_request = 4;
    optional DeleteRequest delete_request = 5;
    optional ConnectRequest connect_request = 6;
    optional DisconnectRequest disconnect_request = 7;
    optional TreeRequest tree_request = 8;
}

message ServerMessage {
    enum Type {
        INIT_RESPONSE = 0;
        CONFIRM_RESPONSE = 1;
        CREATE_RESPONSE = 2;
        DELETE_RESPONSE = 3;
        CONNECT_RESPONSE = 4;
        DISCONNECT_RESPONSE = 5;
        TREE_RESPONSE = 6;
    }
    required Type type = 1;
    optional InitResponse init_response = 2;
    optional ConfirmResponse confirm_response = 3;
    optional CreateResponse create_response = 4;
    optional DeleteResponse delete_response = 5;
    optional ConnectResponse connect_response = 6;
    optional DisconnectResponse disconnect_response = 7;
    optional TreeResponse tree_response = 8;
}